fixed spacing;

--- a/client/src/components/Clock/style.scss
+++ b/client/src/components/Clock/style.scss
@@ -3,5 +3,6 @@
 .Clock {
   flex: 1 1 0;
   padding: $padding;
+  padding-right: $padding / 2;
   text-align: right;
 }
