--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,5 +1,5 @@
 // general
-$padding: 60px;
+$padding: 120px;
 
 // fonts
 $font-size--body: 2rem;
